ps-base/main/default/objects/Contact/fields/Atrial_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Atrial_Risk_Score__c</fullName>
    <label>Atrial Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>