ps-base/main/default/objects/Contact/fields/Battery_Score__c.field-meta.xml
<CustomField>
    <fullName>Battery_Score__c</fullName>
    <label>Battery Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>