ps-base/main/default/objects/Contact/fields/Cadence__c.field-meta.xml
<CustomField>
    <fullName>Cadence__c</fullName>
    <label>Cadence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>