ps-base/main/default/objects/Contact/fields/Implant_Date__c.field-meta.xml
<CustomField>
    <fullName>Implant_Date__c</fullName>
    <label>Implant Date</label>
    <type>Date</type>
</CustomField>