ps-base/main/default/objects/Contact/fields/isHealthCloudRecord__c.field-meta.xml
<CustomField>
    <fullName>isHealthCloudRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Cloud Record</label>
    <type>Checkbox</type>
</CustomField>