ps-base/main/default/objects/Contact/fields/Last_Transmission__c.field-meta.xml
<CustomField>
    <fullName>Last_Transmission__c</fullName>
    <label>Last Transmission</label>
    <type>DateTime</type>
</CustomField>