ps-base/main/default/objects/Contact/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <label>Member ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>