ps-base/main/default/objects/Contact/fields/Pacing_Performance_Score__c.field-meta.xml
<CustomField>
    <fullName>Pacing_Performance_Score__c</fullName>
    <label>Pacing Performance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>