ps-base/main/default/objects/Contact/fields/Preferred_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Clinic__c</fullName>
    <label>Preferred Clinic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ascension Medical Group St. Vincent</fullName>
            </value>
            <value>
                <fullName>Franciscan Health Indiana Heart Physicians</fullName>
            </value>
            <value>
                <fullName>Pinnacle Heart Specialists</fullName>
            </value>
            <value>
                <fullName>IU Health Heart &amp; Vascular Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>