ps-base/main/default/objects/Contact/fields/Preferred_Prior_Appointment_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Prior_Appointment_Patterns__c</fullName>
    <label>Preferred Prior Appointment Patterns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning slots (8 AM – 12 PM)</fullName>
            </value>
            <value>
                <fullName>Afternoon slots (12 PM – 4 PM)</fullName>
            </value>
            <value>
                <fullName>Evening slots (4 PM – 7 PM)</fullName>
            </value>
            <value>
                <fullName>Telehealth preferred</fullName>
            </value>
            <value>
                <fullName>Prefers weekend availability</fullName>
            </value>
            <value>
                <fullName>Follow‑up every 3 months</fullName>
            </value>
            <value>
                <fullName>Urgent appointments preferred when symptoms worsen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>