ps-base/main/default/objects/Contact/fields/Preferred_Provider__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Provider__c</fullName>
    <label>Preferred Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>