ps-base/main/default/objects/Contact/fields/Remote_Monitoring_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Remote_Monitoring_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Monitoring Enrollment</label>
    <type>Checkbox</type>
</CustomField>