ps-base/main/default/objects/Contact/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <label>Speciality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>