ps-base/main/default/objects/Contact/fields/Unified_Individual_Id__c.field-meta.xml
<CustomField>
    <fullName>Unified_Individual_Id__c</fullName>
    <label>Unified Individual Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>